# refactor install application
	# use internal router
	# use controllers
	# use templates
	# add extensions
# refactor modules files structure
# reintroduced users module into the core
# replace PHPThumb by Imagine
# refactor flash messages device
# change Yaml files extension .yaml to .yml
! implement Symfony HttpFoundation
! remove version file and move changelog file for security reasons


2.0-beta2 (2013-12-08)
# Tao is now the Okatea core namespace so old oktInc/classes
where moved to oktInc/Tao and follow psr-0
# remove oktCore::redirect
# remove methods deprecated in 1.0
! show debug mode enabled info
! remove unused dev and debug panels from config page
. replace Clearbricks netHttp by Guzzle


2.0-beta1 (2013-12-03)
# introduce composer components
# remove oktInc/vendor
# remove minify lib
# remove oktDebug class
# remove internal autoloader, now use composer autoloader instead
# all modules bumped to version 2.0-rc1


1.0 (2013-11-26)
! improve perfs by replacing somes functions by PHP natives ones
! add captchas to estimate module


1.0.BETA.5 (2013-11-24)
# new famfamfam sprites (replace previous ones)
! new tinyMCE 4 module
! new estimate module
! superadmin can now remove admin logs
- bug fixes introduced in the previous beta
- remove buggy switch admin view feature
- fix jQuery UI upload custom theme
. deletion of old stuff


1.0.BETA.4 (2013-11-14)
# refactor variables names of emails configuration
! can now use external links in navigation menus
! add navigation items proper recordset
! HTML5 Shiv 3.7.0
! jQuery mousewheel 3.1.4
! jQuery Spectrum Colorpicker 1.1.2
- website title and emails addresses are required
- fix news URL
- fix pcre bug on windows
. deletion of old stuff


1.0.BETA.3 (2013-11-05)
! new breadcrumb policy
! introduce flash messages
! introduce navigation menus management
! Okatea theme changes
! CodeMirror 3.19
! jQuery Cookie 1.4.0
! jQuery blockUI 2.66
. deletion of old stuff


1.0.BETA.2 (2013-08-22)